--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,10 +4,22 @@
     <title>Error page</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/main.css" th:href="@{/css/main.css}" />
+    <head th:replace="fragments :: head">
 </head>
 <body th:with="httpStatus=${T(org.springframework.http.HttpStatus).valueOf(#response.status)}">
-<h1 th:text="|${httpStatus} - ${httpStatus.reasonPhrase}|">404</h1>
-<p th:utext="${errorMessage}">Error java.lang.NullPointerException</p>
-<a href="index.html" th:href="@{/templates/index.html}">Back to Home Page</a>
+<header th:replace="fragments :: header"></header>
+<div class="container">
+
+    <div class="alert alert-danger" role="alert">
+        <h1>Something went wrong!</h1>
+        <h1 th:text="|${httpStatus} - ${httpStatus.reasonPhrase}|">404</h1>
+        <p th:utext="${errorMessage}">Error java.lang.NullPointerException</p>
+    </div>
+    <a href="/" th:href="@{/}" class="btn btn-warning">Back to Home Page</a>
+</div>
+
+
+<footer th:replace="fragments :: footer"></footer>
 </body>
+<script th:replace="fragments :: script" ></script>
 </html>
