--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,7 +12,7 @@
 <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 px-5 mb-4 border-bottom" th:fragment="header">
 
   <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-    <img class="bi me-2 " src="../static/images/badger.png" th:src="@{images/badger.png}" width="40" height="32" role="img" aria-label="Money Badger"  />
+    <img class="bi me-2 " src="http://localhost:9080/images/badger.png"  width="40" height="32" role="img" aria-label="Money Badger"  />
   </a>
 
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
