Added income list, adding and editing income

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,8 +29,8 @@
                 </div>
                 <div>
                     <h2>Income</h2>
-                   <p>New earnings this month? Won the lottery? Got the desired promotion?</p>
-                    <a href="/income" class="btn btn-warning">
+                   <p>New earnings this month? Won the lottery? Got the desired promotion? Just want to check what's up? </p>
+                    <a th:href="@{'/incomes/'+${userId} +'/all'}" class="btn btn-warning">
                         Update income
                     </a>
                 </div>
