--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -109,7 +109,7 @@
             Incorrect Username or Password!
         </div>
 
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <button class="w-100 btn btn-lg btn-warning" type="submit">Sign in</button>
     </form>
 
 
