--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
+  <style>
+    header{
+      background-color: #FFCA2C;
+    }
+  </style>
 </head>
 
 
@@ -16,14 +20,14 @@
   </a>
 
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-    <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
+    <li><a href="/" class="nav-link px-2 link-dark">Home</a></li>
     <li><a th:href="@{'/incomes/'+${userId} +'/all'}" class="nav-link px-2 link-dark">Income</a></li>
     <li><a th:href="@{'/expenses/'+${userId} +'/all'}" class="nav-link px-2 link-dark">Expenses</a></li>
-    <li><a href="/reports" class="nav-link px-2 link-dark">Reports</a></li>
+    <li><a th:href="@{'/reports/'+${userId}}" class="nav-link px-2 link-dark">Reports</a></li>
   </ul>
 
   <div class="col-md-3 text-end">
-    <a class="btn btn-primary" th:href="@{/logout}">Logout</a>
+    <a class="btn btn-dark" th:href="@{/logout}">Logout</a>
   </div>
 </header>
 
